--- a/views/index.hbs
+++ b/views/index.hbs
@@ -30,6 +30,9 @@
   <label>
     <button id='save'>save</button>
     <button id='showAll'>showAll</button>
+    <input type="text" id="id" value="">
+    <span id='data'></span>
+    <button id='delete'>delete</button>
     <span id='result'></span>
     <!-- <input type='checkbox' id='checkbox2' onclick='add()'> -->
     <!-- add -->
@@ -38,53 +41,13 @@
   </div>
 </body>
 </html>
-<script src='./javascripts/js.js'></script>
 <script src='./libs/jquery-3.2.1.min.js'></script>
+<script src='./features/deleteOneNote.js'></script>
+<script src='./features/DisplayAllNotes.js'></script>
+<script src='./features/saveOneNote.js'></script>
+<script src='./AppCode/budgetCalculator.js'></script>
 <script defer type='text/javascript'>
-    $(function(){
-      $("#save").click(function(){
-            $.ajax({
-              url: '/budget',
-              contentType: 'application/json',
-              dataType: 'json',
-              type: 'post',
-              data: JSON.stringify({
-               item1: $('#title1').val(),
-               price1: $("#price1").val(),
-               item2: $('#title2').val(),
-               price2: $("#price2").val(),
-               TotalCost: $('#totalbudget').val()
-             }),
-              success: function(data, status, xhr){
-                console.log('success');
-              },
-              error: function(err, status, xhr){
-                console.log('error: ', err);
-              }
-          });
-      });
-  });
 
-  $(function(){
-    $("#showAll").click(function(data){
-      $.ajax({
-        url:'/budget',
-        type:'get',
-        dataType: 'html',
-        contentType: 'application/json',
-        data: JSON.parse(),
-        success: function(data){
-          if(data){
-            $('#result').html(data);
-            console.log('success');
-          }
-        },
-        error: function(err, status, xhr){
-          console.log('error: ', err);
-        }
-      });
-    });
-  });
 </script>
 <script>
   $('.price').keyup(function () {
