--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,7 @@
     <span id='data'></span>
     <button id='delete'>delete</button>
 
-    <div id='result' class="alert alert-primary" role="alert"></div>
+    <div id='result' class="alert alert-success" role="alert"></div>
     <input type='number' name='tBudget' id='totalbudget' placeholder="total price" disabled>
   </label>
   </div>
