--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,172 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+body{
+  font-family: 'Lato', sans-serif;
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  justify-content: center;
+  align-items: center;
+  margin-top:2%;
+  background-image:url(".././images/calculator-calculation-insurance-finance-53621.jpeg");
+  background-size: cover;
 }
-#result{
+.formdiv{
+  width:726px;
+  height:600px;
+  border:none;
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  justify-content: center;
+  align-items: center;
+  padding:5%;
+  background-color: transparent;
+}
+#form{
+  width: 500px;
+  height: 500px;
+  background: rgba(0,0,0,.5);
+  border:1px solid black;
+  margin-bottom:10%;
+  padding-left:5%;
+  border-radius:5%;
+  box-shadow: 2px 20px 30px black;
+}
+/* body structure  */
+
+#ftitle,
+#stitle,
+#fname,
+#sname,
+#DisplayNotes,
+#deleteOneNote{
   display:none;
 }
-a {
-  color: #00B7FF;
+/* alerts */
+
+input,
+textarea {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  background: transparent;
+  text-align: center;
+  margin-bottom: 5%;
+  margin-left:13%;
+  padding-top:2%;
+  width:30%;
+  border:none;
+  color:white;
+}
+  /* ALL INPUTS */
+.price,
+textarea {
+  border-bottom: 1px solid rgba(81, 203,238, 0.7);
+  padding: 3px 0px 3px 3px;
+}
+.price:focus,
+textarea:focus {
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 20px 0px;
+  box-shadow: 0px 1.5px 2px rgba(81,203, 238, 0.5);
+  border-bottom: 1px solid rgba(81,203, 238, 1);
+  border-radius:2.5px;
+  transition:0.7s;
+  outline:none;
+  margin-left:13%;
+}
+.price:hover{
+  box-shadow: 0px 1.5px 2px rgba(81,203, 238, 0.8);
+  border-bottom: 1px solid rgba(81,203, 238, 1.3);
+  transition:0.3s;
+}
+
+ /* price hover */
+input[name='firstItem'],
+textarea{
+  border-bottom: 1px solid rgba(216,93, 89, 0.5);
+  margin-top:2%;
+}
+input[name='secondItem'],
+input[name='thirdItem'],
+textarea {
+  border-bottom: 1px solid rgba(216,93, 89, 0.5);
+  padding: 3px 0px 3px 3px;
+}
+
+ /* items input */
+input[name='firstItem']:focus,
+textarea{
+  margin: 15px 1px 22px 0px;
+  box-shadow: 0px 1.5px 2px rgba(216, 93, 89, 0.5);
+  padding: 3px 0px 3px 3px;
+  border-bottom: 1px solid rgba(216, 93, 89, 0.5);
+  border-radius:2.5px;
+  transition:0.7s;
+  outline:none;
+  margin-left:13%;
+}
+input[name='secondItem']:focus,
+input[name='thirdItem']:focus,
+textarea:focus {
+  outline:none;
+  margin: 5px 1px 20px 0px;
+  box-shadow: 0px 1.5px 2px rgba(216, 93, 89, 0.5);
+  padding: 3px 0px 3px 3px;
+  border-bottom: 1px solid rgba(216, 93, 89, 0.5);
+  border-radius:2.5px;
+  transition:0.7s;
+  margin-left:13%;
+}
+ /* items focus */
+input[name='firstItem']:hover,
+input[name='secondItem']:hover,
+input[name='thirdItem']:hover{
+  transition:0.3s;
+  box-shadow: 0px 1.5px 2px rgba(216, 93, 89, 0.7);
+  border-bottom: 1px solid rgba(216, 93, 89, 0.7);
+}
+/* items hover */
+
+input[name='tBudget']{
+  cursor: not-allowed;
+  border-bottom: 3px solid #351934;
+  width:70%;
+}
+
+::placeholder
+{
+	color: white;
+  text-align: center;
+}
+
+#id{
+  width:70%;
+}
+#id::placeholder{
+  color: black !important;
+  border:none;
+  display:inline-block;
+  text-align: center;
+  margin-top:3%;
+}
+/* input fields */
+#save-btn{
+  cursor:pointer;
+  margin-left:13%;
+  width:70%;
+}
+#showAll,
+#add
+{
+  cursor:pointer;
+  margin-left:13%;
+  width:35%;
+}
+#ShowByID,
+#delete
+{
+  cursor:pointer;
+  width:35%;
 }
