--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,33 +6,33 @@ body{
   display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
   justify-content: center;
   align-items: center;
-  margin-top:2%;
-  background-image:url(".././images/calculator-calculation-insurance-finance-53621.jpeg");
+  /* background-color: #CC9933; */
+  overflow:hidden;
+  margin-top:5%;
+  background-image:url(".././images/blurred-background-7.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .formdiv{
-  width:726px;
-  height:600px;
-  border:none;
-  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -ms-flexbox;  /* TWEENER - IE 10 */
-  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
-  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
-  justify-content: center;
-  align-items: center;
-  padding:5%;
-  background-color: transparent;
-}
-#form{
   width: 500px;
-  height: 500px;
-  background: rgba(0,0,0,.5);
-  border:1px solid black;
+  height: 600px;
+  background: #FFF;
+  border: none;
   margin-bottom:10%;
-  padding-left:5%;
-  border-radius:5%;
-  box-shadow: 2px 20px 30px black;
+  border-radius:3%;
+  box-shadow: -5px 30px 50px black;
 }
+.alerts{
+  width: 500px;
+  height: 300px;
+  margin-left: 12%;
+
+  background: #FFF;
+  border: none;
+  border-radius:3%;
+  box-shadow: -5px 30px 50px black;
+}
+
 /* body structure  */
 
 #ftitle,
@@ -44,6 +44,24 @@ body{
   display:none;
 }
 /* alerts */
+.label1 {
+  color:black;
+  font-size:20px;
+  margin-top:1%;
+  margin-left:20%;
+  margin-bottom:1%;
+  display:inline-block;
+  transition: 0.2s ease all;
+}
+.label2 {
+  color:black;
+  font-size:20px;
+  margin-top:1%;
+  margin-left:15%;
+  margin-bottom:1%;
+  display:inline-block;
+  transition: 0.2s ease all;
+}
 
 input,
 textarea {
@@ -57,41 +75,18 @@ textarea {
   padding-top:2%;
   width:30%;
   border:none;
-  color:white;
+  color:black;
 }
   /* ALL INPUTS */
-.price,
-textarea {
-  border-bottom: 1px solid rgba(81, 203,238, 0.7);
-  padding: 3px 0px 3px 3px;
-}
-.price:focus,
-textarea:focus {
-  padding: 3px 0px 3px 3px;
-  margin: 5px 1px 20px 0px;
-  box-shadow: 0px 1.5px 2px rgba(81,203, 238, 0.5);
-  border-bottom: 1px solid rgba(81,203, 238, 1);
-  border-radius:2.5px;
-  transition:0.7s;
-  outline:none;
-  margin-left:13%;
-}
-.price:hover{
-  box-shadow: 0px 1.5px 2px rgba(81,203, 238, 0.8);
-  border-bottom: 1px solid rgba(81,203, 238, 1.3);
-  transition:0.3s;
-}
-
- /* price hover */
 input[name='firstItem'],
 textarea{
-  border-bottom: 1px solid rgba(216,93, 89, 0.5);
-  margin-top:2%;
+  border-bottom: 2px solid #4484CE;
+  margin-top:1%;
 }
 input[name='secondItem'],
 input[name='thirdItem'],
 textarea {
-  border-bottom: 1px solid rgba(216,93, 89, 0.5);
+  border-bottom: 2px solid #4484CE;
   padding: 3px 0px 3px 3px;
 }
 
@@ -99,9 +94,9 @@ textarea {
 input[name='firstItem']:focus,
 textarea{
   margin: 15px 1px 22px 0px;
-  box-shadow: 0px 1.5px 2px rgba(216, 93, 89, 0.5);
+  box-shadow: 0px 1px 2px #4484CE ;
   padding: 3px 0px 3px 3px;
-  border-bottom: 1px solid rgba(216, 93, 89, 0.5);
+  border-bottom: 1px solid #4484CE ;
   border-radius:2.5px;
   transition:0.7s;
   outline:none;
@@ -112,9 +107,9 @@ input[name='thirdItem']:focus,
 textarea:focus {
   outline:none;
   margin: 5px 1px 20px 0px;
-  box-shadow: 0px 1.5px 2px rgba(216, 93, 89, 0.5);
+  box-shadow: 0px 1px 2px #4484CE ;
   padding: 3px 0px 3px 3px;
-  border-bottom: 1px solid rgba(216, 93, 89, 0.5);
+  border-bottom: 1px solid #4484CE ;
   border-radius:2.5px;
   transition:0.7s;
   margin-left:13%;
@@ -124,10 +119,37 @@ input[name='firstItem']:hover,
 input[name='secondItem']:hover,
 input[name='thirdItem']:hover{
   transition:0.3s;
-  box-shadow: 0px 1.5px 2px rgba(216, 93, 89, 0.7);
-  border-bottom: 1px solid rgba(216, 93, 89, 0.7);
+  box-shadow: 0px 2px 2px #4484CE ;
+  border-bottom: 1px solid #4484CE ;
 }
 /* items hover */
+
+.price,
+textarea {
+  border-bottom: 2px solid #4484CE;
+  padding: 3px 0px 3px 3px;
+}
+
+ /* price input */
+
+.price:focus,
+textarea:focus {
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 20px 0px;
+  box-shadow: 0px 1.5px 2px #4484CE ;
+  border-bottom: 1px solid #4484CE ;
+  border-radius:2.5px;
+  transition:0.5s;
+  outline:none;
+  margin-left:13%;
+}
+.price:hover{
+  box-shadow: 0px 1.5px 2px #4484CE ;
+  border-bottom: 0.5px solid #4484CE ;
+  transition:0.3s;
+}
+
+/* price hover */
 
 input[name='tBudget']{
   cursor: not-allowed;
@@ -135,13 +157,25 @@ input[name='tBudget']{
   width:70%;
 }
 
+#deleteById{
+  border-bottom: 3px solid #4484CE ;
+  padding: 3px 0px 3px 3px;
+  margin-left:45px;
+}
+#searchbyid{
+  padding: 3px 0px 3px 3px;
+  border-bottom: 3px solid #4484CE ;
+}
 ::placeholder
 {
-	color: white;
+	color:black;
   text-align: center;
 }
 
 #id{
+  background-color:transparent;
+  border:3px solid #4484CE ;
+  margin-top:1%;
   width:70%;
 }
 #id::placeholder{
@@ -153,20 +187,132 @@ input[name='tBudget']{
 }
 /* input fields */
 #save-btn{
+  -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  color:black;
+  background-color: transparent;
+  box-shadow: #4484CE  0 0px 0px 2px inset;
+  border:none;
+  display: block;
+  margin: 20px auto;
+  max-width: 100%;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 35px;
+  padding: 2px 24px;
   cursor:pointer;
   margin-left:13%;
   width:70%;
+  text-transform: uppercase;
 }
-#showAll,
+#save-btn:hover,
+#showAll:hover,
+#add:hover,
+#ShowByID:hover{
+  color: black;
+  box-shadow: #4484CE  0 80px 0px 2px inset;
+}
+#delete:hover{
+  color:black;
+  box-shadow: rgb(209, 8, 61) 0 80px 0px 2px inset;
+}
+#ShowByID
+{
+  -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  color:black;
+  background-color: transparent;
+  box-shadow:#4484CE  0 0px 0px 2px inset;
+  border:none;
+  display: block;
+  max-width: 30%;
+  width:28.5%;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 14px;
+  padding: 2px 19px;
+  cursor:pointer;
+  margin-left: 13%;
+  text-transform: uppercase;
+
+}
+#showAll
+{
+  -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  color:black;
+  background-color: transparent;
+  box-shadow:#4484CE  0 0px 0px 2px inset;
+  border:none;
+  display: block;
+  max-width: 40%;
+  width:30%;
+  /* margin-bottom:10%; */
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 14px;
+  padding: 2px 19px;
+  cursor:pointer;
+  margin-left:53%;
+  margin-top:-5%;
+  text-transform: uppercase;
+
+}
 #add
 {
+  -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  color:black;
+  background-color: transparent;
+  box-shadow:#4484CE  0 0px 0px 2px inset;
+  border:none;
+  display: block;
+  max-width: 40%;
+  width:30%;
+  /* margin-bottom:10%; */
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 14px;
+  padding: 2px 19px;
+  cursor:pointer;
+  margin-left:53%;
+  margin-top: 2%;
+  text-transform: uppercase;
+
+}
+#delete{
+  -webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  -o-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+  color:black;
+  background-color: transparent;
+  box-shadow:#4484CE  0 0px 0px 2px inset;
+  border:none;
+  display: block;
+  max-width: 40%;
+  width:28.5%;
+  /* margin-bottom:10%; */
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 14px;
+  padding: 2px 19px;
   cursor:pointer;
   margin-left:13%;
-  width:35%;
-}
-#ShowByID,
-#delete
-{
-  cursor:pointer;
-  width:35%;
+  margin-top:-5%;
+  text-transform: uppercase;
+
 }
