--- a/react/src/css/App.css
+++ b/react/src/css/App.css
@@ -1,3 +1,8 @@
+.container-fluid{
+  padding-left:0px !important;
+  padding-right:0px !important;
+  padding-top:0px !important;
+}
 body{
   font-family: 'Lato', sans-serif;
   /* display: -webkit-box;  OLD - iOS 6-, Safari 3.1-6, BB7 */
@@ -26,6 +31,14 @@ body{
 h4{
   margin-left:15% !important;
 }
+
+#currency {
+  float:right;
+  width:60px;
+  font-size:12px;
+  padding: 3px 0px 3px 3px;
+}
+
 /* body structure  */
 .form,
 .input,
